crates/ink/tests/ui/contract/fail/event/event-sol-name-fails.rs
// `sol_name` is only supported in Solidity ABI compatibility mode.

#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    #[ink(event, sol_name = "MyEvent")]
    pub struct Event {
        #[ink(topic)]
        pub topic: [u8; 32],
        pub field_1: u32,
    }

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
